--- a/base/static/base/css/as3.css
+++ b/base/static/base/css/as3.css
@@ -29,18 +29,20 @@
     list-style: none;
 }
 
-.but_mobile {
-    display: none;
-}
+/*TODO*/
+/*.but_mobile {*/
+/*    display: none;*/
+/*}*/
 
-.mobileUl ul li,
-.mobileUl ul a {
-  color: black;
-  margin-top: 10px;
-  transition: transform .6s ease;
-  text-decoration: none;
-  font-size: 30px;
-}
+/*todo*/
+/*.mobileUl ul li,*/
+/*.mobileUl ul a {*/
+/*  color: black;*/
+/*  margin-top: 10px;*/
+/*  transition: transform .6s ease;*/
+/*  text-decoration: none;*/
+/*  font-size: 30px;*/
+/*}*/
 
 .mobileUl li {
  border-bottom:1px solid #bbb;
@@ -95,14 +97,14 @@
   transition: opacity 0.3s ease;
 }
 
-.search_container {
-    margin: 230px 0 0 60%;
-    display: flex;
-    align-items: center;
-    position: relative;
-    width: 500px;
-    overflow: hidden;
-}
+/*.search_container {*/
+/*    margin: 230px 0 0 60%;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    position: relative;*/
+/*    width: 500px;*/
+/*    overflow: hidden;*/
+/*}*/
 .search__input {
     width: 500px;
     height: 40px;
@@ -170,48 +172,6 @@
 	}
 }
 
-
-.assortment {
-    position:relative;
-    margin-right: 15px;
-  display: inline-block;
-  clear: both;
-  width: 330px;
-  /*height: 400px;*/
-    height: auto;
-    min-height: 400px;
-  padding: 5px;
-  margin-bottom: 20px;
-  /*background: rgb(2, 0, 36);*/
-  background: #d4d0d6;
-  /*border-radius: 50% 20% / 10% 40%;*/
-  transition: transform .6s ease;
-
-  box-sizing: border-box;
-}
-
-.abs {
-  margin-left: 450px;
-  margin-top: 150px;
-  /*position: absolute;*/
-    margin-bottom: 100px;
-
-  justify-content: space-around;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.abs_basket {
-      margin-left: 324px;
-      top: 35%;
-      /*position: absolute;*/
-    /*margin-bottom: 1000px;*/
-
-      justify-content: space-around;
-      display: flex;
-      flex-wrap: wrap;
-}
-
 .text_in2, .text_out2, .text_about2{
   display: none;
 }
@@ -221,28 +181,10 @@
     color: white;
 }
 
-.pad {
-  padding: 1%;
-  height: 100vh;
-  color: #fff;
-  border-right: 5px solid #4d4d4d;
-  font-weight: bold;
-    position: fixed;
-  top: 0;
-
-}
-
-.pad_text {
-  margin: 40% 0 20% 0;
-}
-
 .pad_text_basket {
     margin: 150px 0 20% 0;
 }
 
-.pad .category {
-  list-style: none;
-}
 
 .list_mobile{
     margin-top: 20%;
@@ -298,7 +240,7 @@
 
 .button_asort .btn-info, .button_asort .btn-success, .button_asort .btn-danger {
   margin-top: 5px;
-  display: block;
+  /*display: block;*/
   width: 100px;
   height: 40px;
   font-size: 80%;
@@ -342,11 +284,6 @@
 /*.zat {*/
 /*    height: 1500px;*/
 /*}*/
-
-.text_block h4 {
-    color: red;
-    width: 65%;
-}
 
 .navig {
   font-size: 38px;
@@ -593,20 +530,20 @@
     .but_mobile {
         display: inline;
     }
-    .search_container {
-        margin: 170px 0 0 40%;
-    }
+    /*.search_container {*/
+    /*    margin: 170px 0 0 40%;*/
+    /*}*/
 }
 
 @media only screen and (max-width: 1030px) {
 .pad_text_basket {
         display: none;
   }
-
-    .abs_basket {
-        top: 35%;
-        margin-left: 1%;
-    }
+    /*todo*/
+    /*.abs_basket {*/
+    /*    top: 35%;*/
+    /*    margin-left: 1%;*/
+    /*}*/
 
   .bask{
     display: none;
@@ -640,9 +577,9 @@
         padding: 0;
     }
 
-    .search_container {
-        width: 350px;
-    }
+    /*.search_container {*/
+    /*    width: 350px;*/
+    /*}*/
 }
 
 @media screen and (max-width: 706px){
@@ -651,28 +588,10 @@
     }
 
     .abs_basket {
+        top: 50%;
         width: 100%;
         margin: -150px 0 0 0;
     }
-
-    .abs {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between; /* Пространство между карточками */
-    }
-
-    .assortment {
-        min-height: 300px;
-      width: calc(50% - 15px); /* Две карточки рядом с учетом отступов*/
-      box-sizing: border-box;
-      /*margin-bottom: 5px; !* Расстояние между рядами карточек *!*/
-      background-color: #fff;
-      /*  background-color: #1b1b1b;*/
-      border: 1px solid #ddd;
-        height: 350px;
-        margin: 0 5px 5px 5px;
-    }
-
 
     .button_asort {
         position: static;
@@ -682,15 +601,7 @@
     .button_asort .btn-danger, .button_bask .btn-danger {
         display: none;
     }
-    .price {
-        display: none;
-    }
-    #info {
-        display: none;
-    }
-    /*h5 {*/
-    /*    display: none;*/
-    /*}*/
+
     .quantity_product_a {
         display: block;
         position: absolute;
@@ -773,10 +684,6 @@
     .nail_desktop {
         display: none;
     }
-    /*.abs_basket {*/
-    /*    margin-left: 0;*/
-    /*}*/
-
 }
 
 @media only screen and (max-width: 530px){
@@ -785,17 +692,13 @@
       font-size: 20px;
     }
 
-    .search_container {
-        margin: 150px 0 0 0;
-        width: auto;
-    }
+    /*.search_container {*/
+    /*    margin: 150px 0 0 0;*/
+    /*    width: auto;*/
+    /*}*/
 
     .abs {
         top: 49%;
     }
-
-    /*.abs_basket {*/
-    /*    top: 49%;*/
-    /*}*/
 
 }
