--- a/users/static/users/css/register.css
+++ b/users/static/users/css/register.css
@@ -1,3 +1,9 @@
+.register {
+  margin-top: 220px;
+  position: relative;
+  bottom: 100px;
+}
+
 .register_div h1, .registr{
     display: inline-block;
 }
@@ -94,8 +100,9 @@ form button[type="submit"]:hover {
     margin-bottom: 0;
   }
   .register {
-    margin: 65px 0;
+    margin-top: 120px;
+  /*  position: relative;*/
+    bottom: 0;
   }
-
 
 }
